@@ -1,7 +1,7 @@
 /* 
 ** NetXMS - Network Management System
 ** Server Library
-** Copyright (C) 2003, 2004 Victor Kirhenshtein
+** Copyright (C) 2003, 2004, 2005, 2006 Victor Kirhenshtein
 **
 ** This program is free software; you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
@@ -17,7 +17,7 @@
 ** along with this program; if not, write to the Free Software
 ** Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 **
-** $module: nxsrvapi.h
+** File: nxsrvapi.h
 **
 **/
 
@@ -40,7 +40,6 @@
 #include <nxclapi.h>
 #include <nxcscpapi.h>
 #include <nms_agent.h>
-#include <rwlock.h>
 #include <messages.h>
 #include <dbdrv.h>
 
