@@ -188,10 +188,6 @@ SOURCE=.\log.cpp
 
 SOURCE=.\main.cpp
 # End Source File
-# Begin Source File
-
-SOURCE=.\rwlock.cpp
-# End Source File
 # End Group
 # Begin Group "Header Files"
 
@@ -239,10 +235,6 @@ SOURCE=..\..\..\include\nxcscpapi.h
 # Begin Source File
 
 SOURCE=..\include\nxsrvapi.h
-# End Source File
-# Begin Source File
-
-SOURCE=..\include\rwlock.h
 # End Source File
 # End Group
 # Begin Group "Resource Files"
