@@ -7,6 +7,7 @@
   Windows agent
 - New MIBs added: S5-ETH-MULTISEG-TOPOLOGY-MIB
 - Server startup and shutdown procedures improved
+- Native operating system read/write locks used whenever possible
 - Windows console:
 	- DCI history data viewer improved
 - Fixed issues: #4, #20, #67, #79, #80, #91, #92, #93, #94
